added junit test cases and added logic for api code code cleanup